refactor(Frame): Frame에 있던 보너스 점수 구하기 기능 이동
- ShotScore에 구현 된 singleScore 및 totalScore로 구현된 기능 사용으로 필요없는 메서드들 제거